# isdb-project-2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dbmsInterface.yaml  docker-compose.yml  post_process.sh  requirements.txt
data/: bmw_sales_data_2010_2014.isdb  bmw_sales_data_2010_2014_trimmed.csv  test_copy_fails.csv
pytests/: config.py  conftest.py  utils.py
pytests/api/: test_error_get.py  test_query_get.py  test_query_get_all.py  test_query_post.py  test_result_get.py  test_system_info.py  test_table_delete.py  test_table_get.py  test_table_get_all.py  test_table_put.py
src/: compress.rs  consts.rs  executor.rs  lib.rs  main.rs  metastore.rs  planner.rs  query.rs  server.rs  utils.rs
tests/: test_compression.rs  test_invalid_file_format.rs  test_invalid_file_format.rsn
tests/utils/: mod.rs
