[package]
name = "simple_rust_dbms"
version = "0.1.0"
edition = "2024"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "simple_rust_dbms"
path = "src/main.rs"

[dependencies]
csv = "1.4.0"
integer-encoding = "4.1.0"
lz4_flex = { version = "0.11" }
rand = "0.9.2"

async-trait = "0.1.89"
swagger = "7.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
clap = "4.5.53"
env_logger = "0.11.8"
tokio = { version = "1.48.0", features = ["full"] }
tokio-openssl = "0.6.5"
openssl = "0.10.75"
hyper = "1.8.1"
hyper-util = "0.1.19"
log = "0.4.29"
uuid = { version = "1.19.0", features = ["v4"] }
openapi_client = { path = "./openapi" }
